--- a/src/scss/components/_form-radio.scss
+++ b/src/scss/components/_form-radio.scss
@@ -8,10 +8,15 @@
 		height: 45px;
 		background-color: transparent;
 		transition: background-color .5s ease;
+		border-radius: 6px;
 
-		&.active {
+		&.subscribe {
+			margin-bottom: 2px;
+		}
+
+		&.active,
+		&:hover {
 			background-color: $selago;
-			border-radius: 6px;
 		}
 	}
 
