--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,3 +1,15 @@
-.btn {
-
+.btn-primary {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 187px;
+    height: 45px;
+    font-size: 14px;
+    font-weight: bold;
+    color: $white;
+    background-color: $governor-bay;
+    line-height: 24px;
+    border-radius: 6px;
+    text-decoration: none;
 }
