--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,8 +1,7 @@
 
 .heading {
     color: $jacarta;
-    text-transform: uppercase;
-    margin-bottom: 6rem;
+    margin-bottom: 5px;
 }
 
 .heading,
