--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $black: #000;
 $selago: #EDF0FC;
 $governor-bay: #3343BB;
 $jacarta: #2C346D;
+$meteor: #C87C0A;
 
 // Font
 $primary: 'DM Sans', sans-serif;
