--- a/src/scss/components/_add-to-cart.scss
+++ b/src/scss/components/_add-to-cart.scss
@@ -5,19 +5,27 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 10px;
         margin-right: 16px;
         width: 100%;
         max-width: 177px;
         height: 45px;
-        font-size: 14px;
-        font-weight: bold;
-        line-height: 24px;
         color: $governor-bay;
         border: 1px solid $governor-bay;
         border-radius: 6px;
 
+        .value {
+            width: 20px;
+            font-size: 14px;
+            font-weight: bold;
+            color: $governor-bay;
+            border: none;
+            text-align: center;
+            line-height: 24px;
+        }
+
         span {
+            padding: 0 10px;
+            font-weight: bold;
             font-size: 20px;
             cursor: pointer;
         }
