--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -13,10 +13,13 @@ body {
 }
 
 .main-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
     margin: 0 auto;
     width: 100%;
     max-width: 1432px;
     max-height: 764px;
+    
+    &__content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
