--- a/src/scss/components/_add-to-cart.scss
+++ b/src/scss/components/_add-to-cart.scss
@@ -18,6 +18,7 @@
             font-size: 14px;
             font-weight: bold;
             color: $governor-bay;
+            background-color: transparent;
             border: none;
             text-align: center;
             line-height: 24px;
