--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -38,6 +38,11 @@
             cursor: pointer;
             list-style: none;
             color: $governor-bay;
+            transition: opacity .3s;
+
+            &:hover {
+                opacity: .8;
+            }
         }
     }
 
