Update animation background for main section content

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -5,7 +5,8 @@ $black: #000;
 $selago: #EDF0FC;
 $governor-bay: #3343BB;
 $jacarta: #2C346D;
-$meteor: #C87C0A;
+$wheat: #f0d6ad;
+$citrine-white: #f3e9e0;
 
 // Font
 $primary: 'DM Sans', sans-serif;
