--- a/src/scss/section/_content.scss
+++ b/src/scss/section/_content.scss
@@ -1,5 +1,10 @@
+@import "base/animations";
+
 .main-container__content__right {
     padding: 70px 122px 98px 82px;
+    background: linear-gradient(45deg, $wheat, $citrine-white, $white);
+	background-size: 300% 100%;
+	animation: gradient 7s ease infinite;
 
     .breadcrumbs {
         margin-bottom: 3px;
