Add slick.js file and styles for slider to project

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,8 @@
 @import "components/star-ratings";
 @import "components/add-to-cart";
 
+@import "vendors/slick";
+
 @import "section/slider";
 @import "section/content";
 @import "section/content-info";
