Replace slick slider with flickity slider

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,8 +13,8 @@
 @import "components/star-ratings";
 @import "components/add-to-cart";
 
-@import "vendors/slick";
+@import "vendors/flickity";
 
-@import "section/slider";
+@import "section/slider-section";
 @import "section/content";
 @import "section/content-info";
