--- a/src/scss/section/_content-info.scss
+++ b/src/scss/section/_content-info.scss
@@ -4,6 +4,7 @@
     justify-content: space-between;
     padding: 0 72px 0 80px;
     height: 76px;
+    background-color: $white;
 
     .product,
     .subscribe {
