Update style for body and main content section

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -10,6 +10,7 @@ body {
     padding: 50px 20px;
     font-family: $primary;
     box-sizing: border-box;
+    background-color: $mercury;
 }
 
 .main-container {
@@ -19,7 +20,6 @@ body {
     max-height: 764px;
     
     &__content {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;
     }
 }
