--- a/src/scss/section/_content.scss
+++ b/src/scss/section/_content.scss
@@ -2,6 +2,7 @@
 
 .main-container__content__right {
     padding: 70px 122px 98px 82px;
+    width: 50%;
     background: linear-gradient(45deg, $wheat, $citrine-white, $white);
 	background-size: 300% 100%;
 	animation: gradient 7s ease infinite;
