Update styles and layout for section slider

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -10,7 +10,7 @@ body {
     padding: 50px 20px;
     font-family: $primary;
     box-sizing: border-box;
-    background-color: $mercury;
+    background-color: $mercury !important;
 }
 
 .main-container {
