--- a/src/scss/section/_content-info.scss
+++ b/src/scss/section/_content-info.scss
@@ -29,6 +29,7 @@
             }
 
             h3 {
+                margin: 0;
                 font-size: 20px;
                 line-height: 28px;
                 text-transform: capitalize;
