--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $selago: #EDF0FC;
 $governor-bay: #3343BB;
 $jacarta: #2C346D;
 $wheat: #f0d6ad;
+$serenade: #FFF3E9;
 $citrine-white: #f3e9e0;
 
 // Font
