--- a/src/scss/base/_animations.scss
+++ b/src/scss/base/_animations.scss
@@ -16,3 +16,14 @@
 		background-position: 20% 80%;
 	}
 }
+
+@keyframes rotating {
+
+    from{
+        transform: rotate(0deg);
+    }
+
+    to{
+        transform: rotate(360deg);
+    }
+}
