--- a/src/scss/components/_add-to-cart.scss
+++ b/src/scss/components/_add-to-cart.scss
@@ -13,6 +13,15 @@
         border: 1px solid $governor-bay;
         border-radius: 6px;
 
+        &__increase,
+        &__decrease {
+            transition: color .2s ease;
+
+            &:hover {
+                color: darken($governor-bay, 50%);
+            }
+        }
+
         &__value {
             width: 20px;
             font-size: 14px;
