Update responsive for slider section

--- a/src/scss/section/_slider-section.scss
+++ b/src/scss/section/_slider-section.scss
@@ -5,6 +5,11 @@
 
         img {
             height: 100%;
+            object-fit: cover;
+
+            @include respond(medium-bear) {
+                width: 100%;
+            }
         }
     }
 
@@ -63,5 +68,9 @@
                 cursor: url("/src/images/arrow-left.svg"), default !important
             }
         }
+    }
+
+    @include respond(medium-bear) {
+        width: 100%;
     }
 }
