--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,14 +1,26 @@
 @mixin respond ($breakpoint){
 
-    @if $breakpoint == mobile-sm {
+    @if $breakpoint == micro-bear {
         @media only screen and (max-width: 480px) { @content };
     }
 
-    @if $breakpoint == mobile {
-        @media only screen and (max-width: 768px) { @content };
+    @if $breakpoint == mini-bear {
+        @media only screen and (max-width: 550px) { @content };
     }
 
-    @if $breakpoint == tab-land {
+    @if $breakpoint == baby-bear {
+        @media only screen and (max-width: 800px) { @content };
+    }
+
+    @if $breakpoint == medium-bear {
         @media only screen and (max-width: 1024px) { @content };
+    }
+
+    @if $breakpoint == mama-bear {
+        @media only screen and (max-width: 1200px) { @content };
+    }
+
+    @if $breakpoint == papa-bear {
+        @media only screen and (max-width: 1450px) { @content };
     }
 }
