--- a/src/scss/section/_content-info.scss
+++ b/src/scss/section/_content-info.scss
@@ -33,6 +33,14 @@
                 font-size: 20px;
                 line-height: 28px;
                 text-transform: capitalize;
+
+                @include respond(baby-bear) {
+                    font-size: 18px;
+                }
+
+                @include respond(micro-bear) {
+                    font-size: 16px;
+                }
             }
 
             span {
@@ -41,6 +49,10 @@
                 font-weight: bold;
                 text-decoration-line: underline;
             }
+        }
+
+        @include respond(baby-bear) {
+            justify-content: center;
         }
     }
 
@@ -63,6 +75,41 @@
                     font-size: 12px;
                 }
             }
+
+            @include respond(baby-bear) {
+                margin-right: 10px;
+            }
+
+            @include respond(micro-bear) {
+                margin: 0 0 10px;
+                text-align: center;
+            }
         }
+
+        .section-btn {
+
+            @include respond(micro-bear) {
+                margin: 0 auto;
+            }
+        }
+
+        @include respond(baby-bear) {
+            justify-content: center;
+            margin-top: 25px;
+        }
+
+        @include respond(micro-bear) {
+            flex-direction: column;
+        }
+    }
+
+    @include respond(medium-bear) {
+        padding: 0 30px;
+    }
+
+    @include respond(baby-bear) {
+        flex-direction: column;
+        padding: 20px;
+        height: 100%;
     }
 }
