Update responsive for content right section

--- a/src/scss/section/_content.scss
+++ b/src/scss/section/_content.scss
@@ -24,6 +24,18 @@
         font-size: 62px;
         line-height: 64px;
         font-weight: 700;
+
+        @include respond(papa-bear) {
+            font-size: 50px;
+        }
+
+        @include respond(medium-bear) {
+            max-width: 100%;
+        }
+
+        @include respond(baby-bear) {
+            font-size: 36px;
+        }
     }
 
     .content {
@@ -35,5 +47,26 @@
             font-size: 14px;
             line-height: 22px;
         }
+
+        @include respond(medium-bear) {
+            max-width: 100%;
+        }
+    }
+
+    @include respond(papa-bear) {
+        padding: 50px;
+    }
+
+    @include respond(mama-bear) {
+        padding: 50px 20px;
+    }
+
+    @include respond(medium-bear) {
+        padding: 120px 40px 50px;
+        width: 100%;
+    }
+
+    @include respond(baby-bear) {
+        padding: 120px 20px 50px;
     }
 }
