--- a/src/scss/section/_content.scss
+++ b/src/scss/section/_content.scss
@@ -27,6 +27,7 @@
 
         @include respond(papa-bear) {
             font-size: 50px;
+            line-height: 50px;
         }
 
         @include respond(medium-bear) {
@@ -35,6 +36,7 @@
 
         @include respond(baby-bear) {
             font-size: 36px;
+            line-height: 36px;
         }
     }
 
